# bile

./: .gitignore  Cargo.toml  README.md  TODO.md
assets/: manifest.json  style.css
fuzz/: .gitignore  Cargo.toml  README.md  core_pattern
fuzz/in/: commit  log  log-older  log-xml  main  readme  refs  refs-xml  repo  root  source  tree
fuzz/src/: main.rs
src/: config.rs  error.rs  lib.rs  main.rs
src/git/: branch.rs  commit.rs  core.rs  mod.rs  tag.rs  tree.rs
src/handlers/: git.rs  index.rs  mod.rs  repo_commit.rs  repo_file.rs  repo_file_raw.rs  repo_home.rs  repo_log.rs  repo_log_feed.rs  repo_refs.rs  repo_refs_feed.rs  repo_tag.rs
src/http/: extractor.rs  mod.rs  path.rs  response.rs
src/utils/: error.rs  extractor.rs  filters.rs  markdown.rs  mod.rs  response.rs
src/utils/git/: branch.rs  commit.rs  core.rs  mod.rs  tag.rs  tree.rs
templates/: base.html  commit-tr.html  commit.html  error-old.html  error.html  file.html  index.html  last-commit.html  log.html  log.xml  refs.html  refs.xml  repo-navbar.html  repo.html  tag.html  tree.html
