[package]
name = "bile"
version = "0.1.0"
authors = [
    "alex wennerberg <alex@alexwennerberg.com>",
    "Jay Jackson <jj@jj.is-a.dev>",
    "wayver <wayver.dev@gmail.com>",
]
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
ansi-to-html = "=0.2.2"
anyhow = "=1.0.101"
askama = "=0.15.4"
axum = { version = "=0.8.8", features = ["tracing"] }
axum-extra = "=0.12.5"
axum-response-cache = "=0.4.0"
clap = { version = "=4.5.59", features = ["derive", "string"] }
comrak = { version = "=0.50.0", default-features = false }
figment = { version = "=0.10.19", default-features = false, features = ["env", "toml"] }
git2 = { version = "=0.20.4", default-features = false }
# hitbox = "=0.2.1"
# hitbox-http = "=0.2.0"
# hitbox-moka = "=0.2.0"
# hitbox-tower = "=0.2.0"
http = "=1.4.0"
jiff = "=0.2.20"
mimalloc = "=0.1.48"
mime = "=0.3.17"
moka = { version = "=0.12.13", features = ["future"] }
num-conv = "=0.2.0"
serde = { version = "=1.0.228", features = ["derive"] }
syntect = { version = "=5.3.0", default-features = false, features = ["default-onig"] }
thiserror = "=2.0.18"
tokio = { version = "=1.49.0", features = ["macros", "rt-multi-thread", "signal", "fs"] }
tower = "=0.5.3"
tower-helmet = "=0.3.0"
tower-http = { version = "=0.6.8", features = ["timeout", "trace"] }
tracing = "=0.1.44"
tracing-error = "=0.2.1"
tracing-subscriber = { version = "=0.3.22", features = ["env-filter"] }
two-face = { version = "=0.5.1", default-features = false, features = ["syntect-fancy"] }

[profile.release]
codegen-units = 1
lto = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }
